fixed horizontal scrolling on mobile

--- a/1337/assets/css/main.css
+++ b/1337/assets/css/main.css
@@ -1018,3 +1018,8 @@ img {
   content: "";
   background: #1AC4FF;
 }
+@media all and (max-width:1024px){
+  .container{
+    width: calc(100% - 1.5rem);
+  }
+}
